POC - partial ripple resize